# thestable

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_notes_reminders.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  paths.py  scheduler.py  security.py  telegram.py
backend/app/db/: base.py  session.py
backend/app/models/: notes_index.py  reminder_log.py  short_url.py  user.py
backend/app/modules/auth/: router.py
backend/app/modules/notes/: router.py
backend/app/modules/reminders/: router.py
backend/app/modules/shortener/: redirect_router.py  router.py
backend/app/schemas/: note.py  reminder.py  short_url.py  user.py
backend/app/services/: auth_service.py  notes_service.py  reminders_service.py  url_service.py
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  svgr.d.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: dashboard-shell.tsx  login-form.tsx  logout-button.tsx  nav-bar.tsx  note-create-form.tsx  note-editor.tsx  notes-list.tsx  register-form.tsx  reminders-list.tsx  sidebar.tsx  url-form.tsx  url-list.tsx
frontend/hooks/: use-auth.ts  use-notes.ts  use-reminders.ts  use-urls.ts
frontend/lib/: api-client.ts  auth.ts  notes-path.ts  pluralize.ts  reminder-schedule.ts  schemas.ts  types.ts
(+13 files in other folders)
