[project]
name = "personal-platform-backend"
version = "0.1.0"
description = "Personal Platform backend (v0.1: auth + URL shortener)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.9.0",
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "python-frontmatter>=1.1.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "tzdata>=2024.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
